--- a/public/css/joinritualwin.css
+++ b/public/css/joinritualwin.css
@@ -21,7 +21,7 @@ input[type=button] {
 }
 
 input[type=button]:hover {
-    background-color: #45a049;
+    background-color: magenta;
     cursor: pointer;
 }
 
