--- a/public/css/joinritualwin.css
+++ b/public/css/joinritualwin.css
@@ -21,7 +21,7 @@ input[type=button] {
 }
 
 input[type=button]:hover {
-    background-color: magenta;
+    background-color: #ff4578;
     cursor: pointer;
 }
 
