Secondary, larger, transparent clickable circles
This should improve the clickability of nodes in Common by drawing a
larger, transparent circle above the existing circles.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -156,6 +156,14 @@ nav a {
   cursor: pointer;
 }
 
+.transparentNode:hover {
+  stroke-opacity: 0.2;
+  stroke: grey;
+  stroke-width: 3px;
+  stroke-location: inside;
+  cursor: pointer;
+}
+
 /*fix teh modal?*/
 
 .clickable {
