--- a/public/css/main.css
+++ b/public/css/main.css
@@ -52,7 +52,7 @@ textarea {
    ========================================================================== */
 
 body {
-  font: 12px/18px "monospace"f, "Lato", "Helvetica", "Helvetica Neue", "Arial";
+  font: 12px/18px "Lato", "Helvetica", "Helvetica Neue", "Arial";
   line-height: 1.6;
 }
 
